--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello there, awesome person!
+<html>
+  <body>
+   Hello, want to be my friend?!
+  </body>
+</html>
+  Hello there, awesome person!
