--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
+  <head>
+    <title>I love this!</title>
+  </head>
+ 
   <body>
    Hello, want to be my friend?!
   </body>
 </html>
-  Hello there, awesome person!
+
