style-index.html
Added a style guide.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Lalala Life is Good!</title>
   </head>
- 
+  <link rel="stylesheet" href="style.css">
   <body>
     <h1>Hello, my name is Tom the Diatom?!</h1>
     <h2>Let's be friends!</h2>
